GERONIMO-3344 bit of cleanup and build a tests jar
git-svn-id: https://svn.apache.org/repos/asf/geronimo/components/txmanager/trunk@559268 13f79535-47bb-0310-9956-ffa450edef68