@@ -34,26 +34,7 @@
     <name>Geronimo :: Connector</name>
 
     <dependencies>
-<!--        
-        <dependency>
-            <groupId>org.apache.geronimo.modules</groupId>
-            <artifactId>geronimo-naming</artifactId>
-            <version>${version}</version>
-        </dependency>
 
-        <dependency>
-            <groupId>org.apache.geronimo.modules</groupId>
-            <artifactId>geronimo-deployment</artifactId>
-            <version>${version}</version>
-        </dependency>
-
-        <dependency>
-            <groupId>org.apache.geronimo.modules</groupId>
-            <artifactId>geronimo-security</artifactId>
-            <version>${version}</version>
-        </dependency>
--->
-        <!-- g-system, g-management come from this via g-j2ee -->
         <dependency>
             <groupId>org.apache.geronimo.components</groupId>
             <artifactId>geronimo-transaction</artifactId>
@@ -65,37 +46,12 @@
             <artifactId>geronimo-j2ee-connector_1.5_spec</artifactId>
             <version>1.1.1</version>
         </dependency>
-<!--
-        <dependency>
-            <groupId>org.tranql</groupId>
-            <artifactId>tranql</artifactId>
-            <scope>test</scope>
-            <exclusions>
-                <exclusion>
-                    <groupId>commons-logging</groupId>
-                    <artifactId>commons-logging</artifactId>
-                </exclusion>
-            </exclusions>
-        </dependency>
--->
-        <!-- needed for passwordcredential realm-->
-<!--
-        <dependency>
-            <groupId>regexp</groupId>
-            <artifactId>regexp</artifactId>
-        </dependency>
--->
+
     </dependencies>
 
     <build>
         <pluginManagement>
             <plugins>
-                <plugin>
-                    <groupId>org.apache.geronimo.plugins</groupId>
-                    <artifactId>car-maven-plugin</artifactId>
-                    <version>${version}</version>
-                    <extensions>true</extensions>
-                </plugin>
 
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
@@ -108,142 +64,7 @@
                     <artifactId>maven-dependency-plugin</artifactId>
                     <version>2.0-alpha-4</version>
                 </plugin>
-
-                <plugin>
-                    <groupId>org.codehaus.mojo</groupId>
-                    <artifactId>groovy-maven-plugin</artifactId>
-                    <version>1.0-alpha-2</version>
-                </plugin>
-
-                <plugin>
-                    <groupId>org.codehaus.mojo</groupId>
-                    <artifactId>selenium-maven-plugin</artifactId>
-                    <version>1.0-beta-2-SNAPSHOT</version>
-                </plugin>
-
-                <plugin>
-                    <groupId>org.codehaus.mojo</groupId>
-                    <artifactId>xmlbeans-maven-plugin</artifactId>
-                    <version>2.3.1-20070720.222301-1</version>
-
-                    <executions>
-                        <execution>
-                            <goals>
-                                <goal>xmlbeans</goal>
-                            </goals>
-                        </execution>
-                    </executions>
-
-                    <configuration>
-                        <download>true</download>
-                        <quiet>false</quiet>
-                    </configuration>
-                </plugin>
-
-
-                <plugin>
-                    <groupId>org.codehaus.mojo.jspc</groupId>
-                    <artifactId>jspc-maven-plugin</artifactId>
-                    <version>2.0-SNAPSHOT</version>
-                    <executions>
-                        <execution>
-                            <goals>
-                                 <goal>compile</goal>
-                            </goals>
-                            <configuration>
-                                <warSourceDirectory>${pom.basedir}/src/main/webapp</warSourceDirectory>
-                            </configuration>
-                        </execution>
-                    </executions>
-                    
-                    <!-- Use the Tomcat 6 JSP compiler, but with our custom Jasper version -->
-                    <dependencies>
-                        <dependency>
-                            <groupId>org.codehaus.mojo.jspc</groupId>
-                            <artifactId>jspc-compiler-tomcat6</artifactId>
-                            <version>2.0-SNAPSHOT</version>
-                            <exclusions>
-                                <exclusion>
-                                    <groupId>org.apache.tomcat</groupId>
-                                    <artifactId>jasper</artifactId>
-                                </exclusion>
-                            </exclusions>
-                        </dependency>
-                        
-                        <dependency>
-                            <groupId>org.apache.tomcat</groupId>
-                            <artifactId>jasper</artifactId>
-                            <version>6.0.13-G543818</version>
-                        </dependency>
-                    </dependencies>
-                </plugin>
-
-                <plugin>
-                    <groupId>org.codehaus.mojo</groupId>
-                    <artifactId>sql-maven-plugin</artifactId>
-                    <version>1.0</version>
-                </plugin>
                 
-                <!--
-                FIXME: Should not configure war to assume jsp by default
-                -->
-
-                <plugin>
-                    <groupId>org.apache.maven.plugins</groupId>
-                    <artifactId>maven-war-plugin</artifactId>
-                    <version>2.0.2</version>
-                    <configuration>
-                        <warSourceDirectory>${pom.basedir}/src/main/webapp</warSourceDirectory>
-                        <webXml>${project.build.directory}/jspweb.xml</webXml>
-                        <archiveClasses>true</archiveClasses>
-                        <archive>
-                            <!-- Do not include META-INF/maven to avoid long file problems on windows -->
-                            <addMavenDescriptor>false</addMavenDescriptor>
-                        </archive>
-                        
-                        <!--
-                        HACK: Include legal files explicity, otherwise they will end up in the wrong path
-                              or in another jar file in the war.
-                        
-                        NOTE: targetPath is broken for webResources (as documented)
-                        -->
-                        <webResources>
-                            <resource>
-                                <directory>${project.build.outputDirectory}</directory>
-                                <includes>
-                                    <include>META-INF/LICENSE*</include>
-                                    <include>META-INF/NOTICE*</include>
-                                    <include>META-INF/DISCLAIMER*</include>
-                                </includes>
-                            </resource>
-                        </webResources>
-                    </configuration>
-                </plugin>
-
-                <plugin>
-                    <groupId>org.apache.maven.plugins</groupId>
-                    <artifactId>maven-ear-plugin</artifactId>
-                    <version>2.3</version>
-                    <configuration>
-                        <archive>
-                            <!-- Do not include META-INF/maven to avoid long file problems on windows -->
-                            <addMavenDescriptor>false</addMavenDescriptor>
-                        </archive>
-                    </configuration>
-                </plugin>
-
-                <plugin>
-                    <groupId>org.apache.maven.plugins</groupId>
-                    <artifactId>maven-rar-plugin</artifactId>
-                    <version>2.2</version>
-                    <configuration>
-                        <archive>
-                            <!-- Do not include META-INF/maven to avoid long file problems on windows -->
-                            <addMavenDescriptor>false</addMavenDescriptor>
-                        </archive>
-                    </configuration>
-                </plugin>
-
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-jar-plugin</artifactId>
@@ -253,81 +74,13 @@
                             <addMavenDescriptor>false</addMavenDescriptor>
                         </archive>
                     </configuration>
-                </plugin>
-
-                <plugin>
-                    <groupId>org.apache.geronimo.plugins</groupId>
-                    <artifactId>geronimo-maven-plugin</artifactId>
-                    <version>${version}</version>
-
-                    <configuration>
-                        <assemblies>
-                            <assembly>
-                                <id>jetty</id>
-                                <groupId>org.apache.geronimo.assemblies</groupId>
-                                <artifactId>geronimo-jetty6-jee5</artifactId>
-                                <version>${version}</version>
-                                <classifier>bin</classifier>
-                                <type>zip</type>
-                            </assembly>
-
-                            <assembly>
-                                <id>jetty-minimal</id>
-                                <groupId>org.apache.geronimo.assemblies</groupId>
-                                <artifactId>geronimo-jetty6-minimal</artifactId>
-                                <version>${version}</version>
-                                <classifier>bin</classifier>
-                                <type>zip</type>
-                            </assembly>
-
-                            <assembly>
-                                <id>tomcat</id>
-                                <groupId>org.apache.geronimo.assemblies</groupId>
-                                <artifactId>geronimo-tomcat6-jee5</artifactId>
-                                <version>${version}</version>
-                                <classifier>bin</classifier>
-                                <type>zip</type>
-                            </assembly>
-
-                            <assembly>
-                                <id>tomcat-minimal</id>
-                                <groupId>org.apache.geronimo.assemblies</groupId>
-                                <artifactId>geronimo-tomcat6-minimal</artifactId>
-                                <version>${version}</version>
-                                <classifier>bin</classifier>
-                                <type>zip</type>
-                            </assembly>
-                            
-                            <assembly>
-                                <id>framework</id>
-                                <groupId>org.apache.geronimo.assemblies</groupId>
-                                <artifactId>geronimo-framework</artifactId>
-                                <version>${version}</version>
-                                <classifier>bin</classifier>
-                                <type>zip</type>
-                            </assembly>
-                        </assemblies>
-
-                        <defaultAssemblyId>jetty</defaultAssemblyId>
-
-                        <optionSets>
-                            <optionSet>
-                                <id>morememory</id>
-                                <options>
-                                    <option>-Xmx512m</option>
-                                    <option>-XX:MaxPermSize=128m</option>
-                                </options>
-                            </optionSet>
-
-                            <optionSet>
-                                <id>debug</id>
-                                <options>
-                                    <option>-Xdebug</option>
-                                    <option>-Xrunjdwp:transport=dt_socket,address=8000,server=y,suspend=n</option>
-                                </options>
-                            </optionSet>
-                        </optionSets>
-                    </configuration>
+                    <executions>
+                      <execution>
+                        <goals>
+                          <goal>test-jar</goal>
+                        </goals>
+                      </execution>
+                    </executions>
                 </plugin>
             </plugins>
         </pluginManagement>
@@ -387,7 +140,8 @@
                         </goals>
                         <configuration>
                             <!-- Fail the build if no legal files were found -->
-                            <strict>true</strict>
+                            <!--<strict>true</strict>-->
+                            <strict>false</strict>
                         </configuration>
                     </execution>
                 </executions>
@@ -416,7 +170,7 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-release-plugin</artifactId>
                 <configuration>
-                    <tagBase>https://svn.apache.org/repos/asf/geronimo/server/tags</tagBase>
+                    <tagBase>https://svn.apache.org/repos/asf/geronimo/components/txmanager/tags</tagBase>
                 </configuration>
             </plugin>
         </plugins>
